# darts_FeG

./: README.md  app.py  clean_up_db.py  models.py  populate_formats.py  pyproject.toml  tournament.py
client/: App.js  package-lock.json  package.json
client/src/: App.js
client/src/components/: Navigation.js  PlayerCard.js  PlayerList.js  Tournament.js  UserList.js
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/assets/: Navigation.jsx  NextRoundButton.jsx  PlayerList.jsx  Tournament.jsx  TournamentRound.jsx  TournamentWinner.jsx  UserCard.jsx
instance/: database_darts.db
migrations/versions/: 308fd4c7635c_initial_migration.py  4865d8f39f6f_add_second_place_to_matches_and_change_.py  5ff1a147c0ce_initial_migration.py  6f95e0d08891_v0_12.py  7da0f52133bc_add_group_number_to_group_model.py  7ef95cc2ae4e_initial_migration.py  86ff6af42861_v0_1.py  eba635e05c45_add_group_and_update_models.py  eeb2e8397d79_v0_11.py
proxy-fix-bundle/: allCAbundle.pem  selfSignedCAbundle.pem
