[project]
name = "Darts_Duel_Builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=44.0.2",
    "flask>=3.1.0",
    "flask-bcrypt>=1.0.1",
    "flask-cors>=5.0.0",
    "flask-migrate>=4.1.0",
    "pymysql>=1.1.1",
    "pytz>=2025.1",
    "sqlalchemy>=2.0.37",
    "sqlalchemy-serializer>=1.4.12",
]
